# intelliscale-scale-service

./: pyproject.toml
src/: algorithms.py  kubernetes_helper.py  main.py  metrcis_helper.py  rule_based_algorithms.py  scaler.py
