[tool.poetry]
name = "scale-service"
version = "0.1.0"
description = ""
authors = ["Nikita Trynus <trynuspoc@gmail.com>"]
readme = "README.md"
packages = [{include = "scale_service"}]

[tool.poetry.dependencies]
python = "^3.10"
kubernetes = "^26.1.0"
typer = "^0.9.0"
pandas = "^2.0.2"
pika = "^1.3.2"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
